# json-cxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxygen.config
cmake/: AddClangCompiler.cmake  AddCodeCoverage.cmake  AddGnuArmCompiler.cmake  AddGnuCompiler.cmake  AddMemoryCheck.cmake
config/: AddClangCompiler.cmake  AddGnuCompiler.cmake  AddGoogleTest.cmake
examples/: CMakeLists.txt  example.cpp  performance.cpp  performance1.cpp  performance1.cpp.orig  rpc_client.cpp  rpc_server.cpp  server_microhttpd.cpp  simple.cpp
include/json/: allocator.hpp  array.hpp  bool.hpp  deserializer.hpp  deserializer_error.hpp  exception.hpp  formatter.hpp  iterator.hpp  json.hpp  null.hpp  number.hpp  object.hpp  pair.hpp  parser.hpp  parser_error.hpp  serializer.hpp  string.hpp  types.hpp  utilities.hpp  utility.hpp  value.hpp  writter.hpp
include/json/allocator/: default.hpp  pool.hpp
include/json/formatter/: compact.hpp  pretty.hpp
include/json/rpc/: client.hpp  error.hpp  list.hpp  server.hpp  time.hpp
include/json/rpc/client/: call_method.hpp  call_method_async.hpp  closing_context.hpp  common.hpp  context.hpp  create_context.hpp  curl_client.hpp  curl_context.hpp  curl_proactor.hpp  destroy_context.hpp  event.hpp  event_notify.hpp  event_type.hpp  executor.hpp  http_client.hpp  http_context.hpp  http_proactor.hpp  http_protocol.hpp  http_settings.hpp  message.hpp  message_type.hpp  proactor.hpp  protocol.hpp  protocol_http.hpp  protocol_type.hpp  request.hpp  send_notification.hpp
include/json/rpc/client/event/: call_method.hpp  context.hpp  send_notification.hpp
include/json/rpc/client/message/: call_method_async.hpp  call_method_sync.hpp  connect.hpp  create_context.hpp  destroy_context.hpp  disconnect.hpp  send_notification_async.hpp  send_notification_sync.hpp  set_error_to_exception.hpp  set_http_settings.hpp  set_id_builder.hpp
include/json/rpc/client/protocol/: ipv4.hpp
include/json/rpc/server/: http_server.hpp  http_settings.hpp  microhttpd_server.hpp
include/json/writter/: counter.hpp  string.hpp
old_include/json/: deserializer.hpp  iterator.hpp  json.hpp  number.hpp  value_error.hpp
old_include/json/formatter/: compact.hpp  pretty.hpp
old_include/json/writter/: string.hpp
old_src/: CMakeLists.txt  deserializer.cpp  deserializer_error.cpp  number.cpp  parser.cpp  parser.hpp  serializer.cpp  value.cpp  value_error.cpp
old_src/formatter/: CMakeLists.txt  pretty.cpp
old_src/writter/: counter.cpp  string.cpp
src/: CMakeLists.txt  allocator.cpp  array.cpp  default_allocator.cpp  default_allocator.hpp  deserializer.cpp  deserializer.cpp.orig  deserializer_error.cpp  exception.cpp  formatter.cpp  iterator.cpp  main.cpp  main2.cpp  number.cpp  object.cpp  pair.cpp  parser.cpp  parser.hpp  parser_error.cpp  parser_number.cpp  parser_number.hpp  parser_string.cpp  parser_string.hpp  serializer.cpp  string.cpp  value.cpp  value_error.cpp  writter.cpp
src/allocator/: default.cpp  pool.cpp
src/formatter/: compact.cpp  pretty.cpp
src/rpc/: client.cpp  error.cpp  list.cpp  server.cpp
src/rpc/client/: call_method.cpp  call_method_async.cpp  closing_context.cpp  context.cpp  create_context.cpp  curl_client.cpp  curl_context.cpp  curl_proactor.cpp  destroy_context.cpp  event.cpp  event_notify.cpp  executor.cpp  http_client.cpp  http_context.cpp  http_proactor.cpp  http_protocol.cpp  http_settings.cpp  message.cpp  proactor.cpp  protocol_http.cpp  request.cpp  send_notification.cpp
src/rpc/client/event/: call_method.cpp  context.cpp  send_notification.cpp
src/rpc/client/message/: call_method_async.cpp  call_method_sync.cpp  connect.cpp  create_context.cpp  destroy_context.cpp  disconnect.cpp  send_notification_async.cpp  send_notification_sync.cpp  set_error_to_exception.cpp  set_http_settings.cpp  set_id_builder.cpp
src/rpc/client/protocol/: ipv4.cpp
src/rpc/server/: http_server.cpp  http_settings.cpp  microhttpd_server.cpp
src/writter/: CMakeLists.txt  string.cpp
tests/: CMakeLists.txt  test_deserializer.cpp  test_runner.cpp
tests/gtest/: CMakeLists.txt
tests/gtest/src/: CMakeLists.txt
valgrind/: valgrind.supp
